[build-system]
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "coremltools"
version = "1.0.0"
description = "CoreML tools"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["numpy>=1.19.0", "pytest>=6.0.0", "protobuf>=3.15.0"]

[project.urls]
homepage = "https://your-project-homepage.example.com"
repository = "https://github.com/your-username/coremltools"
